--- a/README.org
+++ b/README.org
@@ -1,12 +1,12 @@
 * Spring 2022 - Lab 01
 
-* Last name: 
+* Last name: Cheema
 
-* First name: 
+* First name: Muhammed
 
-* GitHub username: 
+* GitHub username: MuhammedACheema
 
-* Notes:
+* Notes: Lab 1
 
 
 
